# ayeto-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: chat.py  simple_chat.py
src/ayeto/: __init__.py  _client.py  _defaults.py  _endpoints.py  _exceptions.py  _logger.py  _utils.py  _version.py  requests.py  responses.py  types.py  version.py
tests/: test_client_version.py
